# auto-vj

./: .env.example  AGENTS.md  CLAUDE.md  README.md  main.py  main_2d.py  main_gui.py  main_mapping.py  mapping_lab_export.json  presets.json  pyproject.toml  system_prompt.txt  test_artnet.py  test_artnet_raw.py  test_link.py
.claude/: settings.local.json
modules/: artnet_renderer.py  audio_level.py  beat_detector.py  bpm.py  drop_estimator.py  effects.py  gui_app.py  mapping_detection.py  mapping_lab.py  mapping_loader.py  recorder.py  render_2d.py  sequences.py  tui.py
tests/: test_artnet_mapping_output.py  test_bpm.py  test_drop_estimator.py  test_effects.py  test_main_2d.py  test_mapping_detection.py  test_mapping_lab_opencv.py  test_mapping_loader.py  test_render_2d.py  test_sequences.py
