[project]
name = "auto-vj"
version = "0.1.0"
description = "Push-to-talk voice assistant powered by OpenAI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.0",
    "sounddevice",
    "numpy",
    "pynput",
    "python-dotenv",
    "pyartnet>=2.0",
    "pydantic>=2.12.5",
    "textual>=8.1.1",
]

[project.scripts]
auto-vj = "main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
