[project]
name = "auto-vj"
version = "0.1.0"
description = "Push-to-talk VJ lighting controller: voice → GPT → LED effects via ArtNet, with Ableton Link BPM sync"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.0",
    "sounddevice",
    "numpy",
    "pynput",
    "python-dotenv",
    "pyartnet>=2.0",
    "pydantic>=2.12.5",
    "textual>=8.1.1",
    "aalink>=0.2.1",
    "pyqt6>=6.10.2",
    "librosa>=0.11.0",
]

[project.scripts]
auto-vj-gui = "modules.gui_app:run_gui"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
